# ACGE

./: CMakeLists.txt  acge.sublime-workspace
doc/: ACGE_Design  ACGE_Design.old  ACGE_Design.tex  ACGE_FAQ.aux  ACGE_FAQ.tex  ACGE_FAQ.toc  ACGE_Log.tex  build.bat
examples/: CMakeLists.txt  example1.cpp
include/: acge.h  graphics_device_factory.h  point_transformator.h
src/: CMakeLists.txt  PlatformHead.h  acge.h
src/2d/: Layer.h  Node.h
src/base/: BaseStruct.h  CMakeLists.txt
src/device/: CMakeLists.txt  GraphicsDeviceFactory.cpp  GraphicsDeviceFactory.h  GraphicsDeviceStruct.h  IGraphicsDevice.h  device.h  graphics_device_factory.cpp  graphics_device_factory.h  graphics_device_struct.h  hal_graphics_device.cpp  hal_graphics_device.h  i_graphics_argbcolor.h  i_graphics_clearsufface.h  i_graphics_device.h  i_graphics_drawpoint.h  i_unknow.h
src/device/framebuffer/: GraphicsDevice.h  graphice_device.cpp  graphice_device.h  graphics_device.cpp  graphics_device.h
src/device/gdiplus/: CMakeLists.txt  GraphicsDevice.cpp  GraphicsDevice.h  graphics_device.cpp  graphics_device.h
src/device/opengl/: CMakeLists.txt  GraphicsDevice.cpp  GraphicsDevice.h  graphics_device.cpp  graphics_device.h
src/math/: CMakeLists.txt  PointTransformator.h  point_transformator.cpp  point_transformator.h
src/platform/: CMakeLists.txt  dynamic_linker.cpp  dynamic_linker.h  platform.h  platform_head.h  text_log.cpp  text_log.h
src/render/: CMakeLists.txt  ITexture.h  Texture.h
src/tools/: CMakeLists.txt  DynamicLinker.cpp  DynamicLinker.h  Image.h  PNGImage.cpp  PNGImage.h  TextLog.cpp  TextLog.h
test/unittest/device/: test_graphics_device_factory.cpp
test/unittest/device/framebuffer/: test_framebuffer_device.cpp
test/unittest/device/gdiplus/: test_gdiplus_device.cpp
test/unittest/device/opengl/: test_opengl_device.cpp
test/unittest/platform/: test_dynamic_linker.cpp
tests/: CMakeLists.txt
tests/device/framebuffer/: test_framebuffer_device.cpp
tests/math/: CMakeLists.txt  test_point_transformator.cpp
tests/mock/: CMakeLists.txt  mock_object.cpp  mock_object.h
tests/platform/: CMakeLists.txt  test_dynamic_linker.cpp  test_text_log.cpp
tests/resource/: CMakeLists.txt
